[gd_scene load_steps=10 format=2]

[ext_resource path="res://default_env.tres" type="Environment" id=1]
[ext_resource path="res://ClientsidePrediction/ClientsidePrediction.gd" type="Script" id=2]
[ext_resource path="res://ClientsidePrediction/ClientsidePrediction.gd" type="Script" id=3]
[ext_resource path="res://ClientsidePrediction/ClientsidePrediction.tscn" type="PackedScene" id=4]
[ext_resource path="res://ClientsidePrediction/DummySpawner.gd" type="Script" id=5]
[ext_resource path="res://ClientsidePrediction/ServerScriptForConnectionHandlingEtc.gd" type="Script" id=6]
[ext_resource path="res://ClientsidePrediction/ClientsidePredictionSpawner.gd" type="Script" id=7]

[sub_resource type="BoxShape" id=2]

[sub_resource type="PlaneMesh" id=3]

[node name="Main" type="Spatial"]
pause_mode = 2

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 60, 0 )
light_energy = 0.8
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="Floor" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 256, 0, 0, 0, 1, 0, 0, 0, 256, 0, 0, 0 )
shape = SubResource( 2 )

[node name="FloorMesh" type="MeshInstance" parent="Floor"]
transform = Transform( 256, 0, 0, 0, 1, 0, 0, 0, 256, 0, 0, 0 )
use_in_baked_light = true
mesh = SubResource( 3 )
material/0 = ExtResource( 3 )

[node name="ServerScriptForConnectionHandlingEtc" type="Spatial" parent="."]
script = ExtResource( 6 )

[node name="DummySpawner" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="ClientsidePrediction" parent="." instance=ExtResource( 4 )]
script = ExtResource( 2 )

[node name="ClientsidePredictionSpawner" type="Spatial" parent="."]
script = ExtResource( 7 )
